2022-11-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha02: Huli Halloween';git push
	git tag -a 5.1.2-alpha02 -m 'all: prn_usg() not OOM; ncremap: recognize T_mid, ps/plev_nm_in/out/tpl; ncz2psx: man';git push --tags

	* ncremap add ps_nm_in, ps_nm_out, plev_nm_in, plev_nm_out to excluded variables list

2022-10-31  Charlie Zender  <zender@uci.edu>

	* ncremap treat T_mid as temperature and VerticalLayerMidpoint as geopotential height in vertical interpolation (for SCREAM)

	* ncpdq ncbo ncwa ncflint print usage not die with OOM when called without arguments

2022-10-30  Charlie Zender  <zender@uci.edu>

	* Add man page ncz2psx.1

2022-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha01: Twit';git push
	git tag -a 5.1.2-alpha01 -m 'Functionally identical to 5.1.1';git push --tags

	* nco_rgr.c add plev_nm_out, ps_nm_in, ps_nm_out as user-modifiable

	* NCO 5.1.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1: Tangentially Speaking';git push
	git tag -a 5.1.1 -m 'all: stdin, -o fl_out, ncz2psx, nsb->nesb, bgr->btg, bgb->bgr, cdc_lst_bld fix; ncclimo: rgn_avg; ncremap: chk_map bln xcp, fix idw, mpas add_fll, no_add_fll, msk sgs, vrt ntp 1D, vrt_xtr mth=zero,lnr, dpr correct_areas, mono3';git push --tags

2022-10-21  Charlie Zender  <zender@uci.edu>

	* Makefile.old implement ANTLR_LIB_FLG ANTLR_INC_FLG to fix Andes build

	* NCO 5.1.1-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-beta01: Pancreatic';git push
	git tag -a 5.1.1-beta01 -m 'all: stdin, -o fl_out, ncz2psx, nsb->nesb, bgr->btg, bgb->bgr, cdc_lst_bld fix; ncclimo: rgn_avg; ncremap: chk_map bln xcp, fix idw, mpas add_fll, no_add_fll, msk sgs, vrt ntp 1D, vrt_xtr mth=zero,lnr', dpr correct_areas, mono3;git push --tags

	* Document stdin, NCZarr, rgn_avg, chk_map, add_fll, msk_apl, vrt_xtr
